Added more items

--- a/theAreanaSim/simulation.html
+++ b/theAreanaSim/simulation.html
@@ -583,7 +583,7 @@
 
             const DEFAULT_NAMES = [
                 "Will", "Alex", "Ty", "Eli", "Ethan", "Katrine",
-                "Quinn", "Josh", "Kelly", "Chad", "CJ", "Raechel",
+                "Quinn", "Jash", "Kelly", "Chad", "CJ", "Raechel",
                 "Hannah", "Camille", "Bryce", "Andy", "Anna", "Landon",
                 "Kya", "Lars", "Sara", "Aubrey", "Katie", "Daniel"
             ];
