--- a/projects.html
+++ b/projects.html
@@ -25,6 +25,31 @@
   <section data-aos="fade-up" id="projects">
     <h2>All Projects</h2>
     <div class="projects-grid">
+      
+      <!-- ==================================================== -->
+       
+      <div class="project">
+        <h3>Hunger Games Simulator</h3>
+        <p class="short-description">
+          A fully interactive, browser-based Hunger Games simulation engine featuring dynamic event generation, inventory systems, and day-by-day storytelling.
+        </p>
+
+      <div class="full-description">
+        <ul>
+          <li>Built a complete front-end simulation viewer with custom UI for events, fallen tributes, and survivor tracking</li>
+          <li>Developed a Python backend that procedurally generates arena events using configurable probabilities and item systems</li>
+          <li>Implemented lethal, non-lethal, loot, inventory, and special-item events with multi-victim and placeholder-driven templates</li>
+          <li>Designed a JSON-based simulation format enabling repeatable runs and external configuration through <code>arena_events.json</code></li>
+          <li>Created a polished simulation flow including Bloodbath logic, death pacing, mandatory eliminations, and victory generation</li>
+        </ul>
+
+        <a href="theAreanaSim/simulation.html">
+          View on Website
+        </a>
+      </div>
+
+  <button class="toggle-button">View More</button>
+</div>
 
 
       <!-- ==================================================== -->
@@ -162,7 +187,7 @@
 
       <!-- ==================== PROJECT 4 ==================== -->
       <div class="project">
-      <h3>This Website!</h3>
+      <h3>This Website</h3>
       <p class="short-description">
       This portfolio website was designed and developed from scratch using HTML, CSS, and JavaScript. It showcases my technical skills, projects, and experience in a responsive and visually appealing layout.
       </p>
