--- a/projects.html
+++ b/projects.html
@@ -27,6 +27,35 @@
     <h2>All Projects</h2>
     <div class="projects-grid">
       
+
+
+      <!-- ==================================================== -->
+
+
+      <div class="project">
+        <h3>Self-Hosted Compute Module 5 Server Infrastructure</h3>
+        <p class="short-description">
+          Designed, deployed, and maintained a headless Linux server using a Raspberry Pi Compute Module 5 with NVMe storage, optimized for remote access and long-running services.
+        </p>
+        <div class="full-description">
+          <ul>
+            <li>Configured Raspberry Pi OS (64-bit) on a Raspberry Pi Compute Module 5 with NVMe SSD root filesystem</li>
+            <li>Customized EEPROM boot order to prioritize NVMe over on-module storage</li>
+            <li>Diagnosed and resolved boot conflicts caused by residual storage on previously used CM5 hardware</li>
+            <li>Set up secure key-based SSH access and Ethernet-first networking for stable remote administration</li>
+            <li>Disabled Wi-Fi via NetworkManager to reduce attack surface and improve reliability</li>
+            <li>Installed and configured Tailscale for secure remote access across restrictive networks</li>
+            <li>Monitored system health including CPU temperature, memory usage, zram swap, and storage mounts</li>
+            <li>Deployed and administered a modded Minecraft server optimized for ARM-based hardware</li>
+            <li>Automated maintenance with cron jobs for daily backups, retention policies, and permission management</li>
+            <li>Performed routine Linux server administration including service management and scheduled reboots</li>
+          </ul>
+          <!-- Optional image -->
+          <!-- <img src="images/cm5-server.jpg" alt="Compute Module 5 server setup" style="max-width: 100%; height: auto;"> -->
+        </div>
+        <button class="toggle-button">View More</button>
+      </div>
+
       <!-- ==================================================== -->
        
       <div class="project">
