--- a/projects.html
+++ b/projects.html
@@ -33,7 +33,7 @@
 
 
       <div class="project">
-        <h3>Self-Hosted Compute Module 5 Server Infrastructure</h3>
+        <h3>Self-Hosted Server Infrastructure</h3>
         <p class="short-description">
           Designed, deployed, and maintained a headless Linux server using a Raspberry Pi Compute Module 5 with NVMe storage, optimized for remote access and long-running services.
         </p>
