--- a/index.html
+++ b/index.html
@@ -100,30 +100,28 @@
   <!-- Pinned Project -->
   <section id="projects" data-aos="fade-up">
     <div class="project">
-        <h3>Static Website Generator</h3>
-        <p class="short-description">
-          A Tkinter-based GUI tool for generating fully customizable, responsive static websites without writing a single line of HTML or CSS.
-        </p>
-        <div class="full-description">
-          <ul>
-            <li>Intuitive GUI interface—build pages visually with input fields and buttons.</li>
-            <li>Customizable content: titles, headings, paragraphs, embedded images & YouTube videos, footers, and optional banners.</li>
-            <li>Responsive design: outputs mobile-friendly HTML5 and CSS3 layouts.</li>
-            <li>Nine built-in themes including Light Minimalist, Dark Mode, Cyberpunk Neon, Vintage, and more.</li>
-            <li>Live preview: instantly render your site in the browser as you work.</li>
-            <li>Export options: save separate HTML and CSS files to any directory.</li>
-          </ul>
-          <p>
-            Developed during Liberty University’s Software Development Club hackathon (2nd place), this tool streamlines website creation with multimedia support and theme switching—all powered by Python and Tkinter.
-          </p>
-          <img src="gifs/websitegenGIF.gif" alt="Generator demo" style="max-width: 100%; height: auto;">
-          <p>
-
-          </p>
-          <a href="https://github.com/willaurum/Static-Website-Generator" target="_blank">View on GitHub</a>
-        </div>
-        <button class="toggle-button">View More</button>
+      <h3>Self-Hosted Server Infrastructure</h3>
+      <p class="short-description">
+        Designed, deployed, and maintained a headless Linux server using a Raspberry Pi Compute Module 5 with NVMe storage, optimized for remote access and long-running services.
+      </p>
+      <div class="full-description">
+        <ul>
+          <li>Configured Raspberry Pi OS (64-bit) on a Raspberry Pi Compute Module 5 with NVMe SSD root filesystem</li>
+          <li>Customized EEPROM boot order to prioritize NVMe over on-module storage</li>
+          <li>Diagnosed and resolved boot conflicts caused by residual storage on previously used CM5 hardware</li>
+          <li>Set up secure key-based SSH access and Ethernet-first networking for stable remote administration</li>
+          <li>Disabled Wi-Fi via NetworkManager to reduce attack surface and improve reliability</li>
+          <li>Installed and configured Tailscale for secure remote access across restrictive networks</li>
+          <li>Monitored system health including CPU temperature, memory usage, zram swap, and storage mounts</li>
+          <li>Deployed and administered a modded Minecraft server optimized for ARM-based hardware</li>
+          <li>Automated maintenance with cron jobs for daily backups, retention policies, and permission management</li>
+          <li>Performed routine Linux server administration including service management and scheduled reboots</li>
+        </ul>
+        <!-- Optional image -->
+        <!-- <img src="images/cm5-server.jpg" alt="Compute Module 5 server setup" style="max-width: 100%; height: auto;"> -->
       </div>
+      <button class="toggle-button">View More</button>
+    </div>  
       <!-- View All Projects Button -->
       <div style="text-align: center; margin-top: 20px;">
         <a href="projects.html" class="project-button">View All Projects</a>
